WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
40865
Incorrect handling of multiple BOMs scattered through a file.
https://bugs.webkit.org/show_bug.cgi?id=40865
Summary
Incorrect handling of multiple BOMs scattered through a file.
Oliver Hunt
Reported
2010-06-18 15:56:07 PDT
Incorrect handling of multiple BOMs scattered through a file.
Attachments
Patch
(3.71 KB, patch)
2010-06-18 16:02 PDT
,
Oliver Hunt
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Oliver Hunt
Comment 1
2010-06-18 16:02:53 PDT
Created
attachment 59164
[details]
Patch
Geoffrey Garen
Comment 2
2010-06-18 16:04:34 PDT
Comment on
attachment 59164
[details]
Patch r=me
Oliver Hunt
Comment 3
2010-06-18 16:09:38 PDT
Committed
r61450
: <
http://trac.webkit.org/changeset/61450
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug