2010-06-18  Oliver Hunt  <oliver@apple.com>

Reviewed by Geoffrey Garen.

        Incorrect handling of multiple BOMs scattered through a file.
        https://bugs.webkit.org/show_bug.cgi?id=40865

        When determining the offset of open and close braces in a source
        with BOMs we were finishing our count early as we failed to account
        for BOMs prior to the open/close brace positions effecting those
        positions.

        * parser/Lexer.cpp:
        (JSC::Lexer::sourceCode):
2010-06-18  Oliver Hunt  <oliver@apple.com>

        Reviewed by Geoffrey Garen.

        Incorrect handling of multiple BOMs scattered through a file.
        https://bugs.webkit.org/show_bug.cgi?id=40865

        Put a few more BOMs into this testcase so that it hits the other cases
        that were missed before.

        * fast/js/resources/bom-in-file-retains-correct-offset.js:
        (g.f):
        (g):

Canonical link: https://commits.webkit.org/52460@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61450 268f45cc-cd09-0410-ab3c-d52691b4dbfc