JavaScriptCore/parser/Lexer.cpp
@@ -1024,20 +1024,23 @@ SourceCode Lexer::sourceCode(int openBrace, int closeBrace, int firstLine)
         return SourceCode(m_source->provider(), openBrace, closeBrace + 1, firstLine);
 
     const UChar* data = m_source->provider()->data();
+    
+    ASSERT(openBrace < closeBrace);
+    int i;
+    for (i = m_source->startOffset(); i < openBrace; ++i) {
+        if (data[i] == byteOrderMark) {
+            openBrace++;
+            closeBrace++;
+        }
+    }
+    for (; i < closeBrace; ++i) {
+        if (data[i] == byteOrderMark)
+            closeBrace++;
+    }
 
     ASSERT(openBrace < closeBrace);
 
-    int numBOMsBeforeOpenBrace = 0;
-    int numBOMsBetweenBraces = 0;
-
-    int i;
-    for (i = m_source->startOffset(); i < openBrace; ++i)
-        numBOMsBeforeOpenBrace += data[i] == byteOrderMark;
-    for (; i < closeBrace; ++i)
-        numBOMsBetweenBraces += data[i] == byteOrderMark;
-
-    return SourceCode(m_source->provider(), openBrace + numBOMsBeforeOpenBrace,
-        closeBrace + numBOMsBeforeOpenBrace + numBOMsBetweenBraces + 1, firstLine);
+    return SourceCode(m_source->provider(), openBrace, closeBrace + 1, firstLine);
 }
 
 } // namespace JSC
